--- a/weWeb/css/receiver.css
+++ b/weWeb/css/receiver.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 body{
     background: #eee;
     font-size: 1rem;
@@ -33,53 +29,40 @@ h3{font-weight: bold;text-align: center;}
     width: 19%;
 }
 .phone_puts{
-    width: 100%;
+    width: 50%;
     padding:6% 1%;
     outline: 0;
     border: none;
+    font-size: 1rem;
 }
-.phone_puts.secd{width: 60%;}
+.phone_puts.secd{width: 36%;}
 .get_code{
-    display:inline-block;
-    width: 34%;
-    background:#85b3ff;border-radius: 6px;padding: 4% 2%;
-    /*text-align: center;*/
-    /*text-decoration: none;*/
-    border: none;
-    color: #fff;
-    outline: none;
+    display:inline-block;width: 30%;border: 1px solid #04be02;border-radius: 6px;padding: 2% 0;
+    text-align: center;
+    text-decoration: none;
+    color: #04be02;
 }
 .btn_cont{padding: 5% 2%;}
-.subm_btn{
+.confirm_btn,.back_btn{
     display: block;
     text-align: center;
     padding: 5% 0;
     text-decoration: none;
     border-radius: 6px;
-    background: #85b3ff;
+}
+.confirm_btn{
+    background: #04be02;
     color: #fff;
 }
-.head_cont{
-    background: #ddd3c2;
-    overflow: hidden;
-    padding: 10% 3%;
+.back_btn{
+    background: #f7f7f7;
+    margin: 6% 0;
+    border: 1px solid #ccc;
+    color: #333;
 }
-.logo_img{width: 90px;height: 90px;border-radius: 50%;overflow: hidden;margin: 0 auto;display: block;}
-.vip_name{
-    padding: 4% 0 0;
+.foot{
     text-align: center;
-    font-weight: bold;
-    color: #fff;
-    font-size: 1rem;
+    color: #999;
+    padding:4% 0;
+    width: 100%;
 }
-
-.disd{background: #fff;color: #333;border: 1px solid #ccc;}
-/*错误提示样式*/
-.errputs{
-    border: 1px solid red;
-}
-
-.weui_btn_area.change_btn_box{
-    margin: 3.17647059em 15px .3em;
-}
-.weui_btn.chg_get{font-size: 16px;}
